--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,10 @@ body {
     font-family: Bai Jamjuree;
 }
 
+.cartao:hover .cartao__conteudo {
+    transform: rotateY(180deg);
+}
+
 footer {
     background-color: black;
     color: white;
@@ -47,9 +51,11 @@ footer p {
 }
 
 .cartao__conteudo {
+    background-color: var(--card-front-color);
     text-align: center;
     height: 100%;
-    background-color: var(--card-front-color);
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
 }
 
 .cartao__conteudo h3 {
@@ -59,13 +65,15 @@ footer p {
 }
 
 .cartao__conteudo h3 {
-    background-color: tomato;
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+    backface-visibility: hidden;
 }
 
 .cartao__conteudo__pergunta p{
@@ -76,4 +84,22 @@ footer p {
 .cartao__conteudo__resposta p{
     color: var(--card-back-color);
     font-weight: 700;
+}
+
+.cartao__conteudo__pergunta,
+.cartao__conteudo__resposta {
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.cartao__conteudo__resposta {
+    transform: rotateY(180deg);
+}
+
+.cartao__conteudo p {
+    margin-top: 1rem;
+    padding: 2rem;
+    margin-top: 4rem;
 }
