--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,11 @@ footer p {
 }
 
 #container {
-    display:flex ;
+    display: flex;
+     flex-wrap: wrap;
+     justify-content: space-between;
+     padding: 4rem;
+     gap: 3rem;
 }
 
 .cartao {
