--- a/assets/style.css
+++ b/assets/style.css
@@ -9,63 +9,28 @@ body {
     font-family: Bai Jamjuree;
 }
 
-.cartao:hover .cartao__conteudo {
-    transform: rotateY(180deg);
-}
-
-footer {
-    background-color: black;
-    color: white;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 2rem;
-}
-
-footer p {
-    text-align: center;
-    font-size: 0.6rem;
-    margin-top: 0.5rem;
-}
-
 #container {
-    display: flex;
-     flex-wrap: wrap;
-     justify-content: space-between;
-     padding: 4rem;
-     gap: 3rem;
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 4rem;
+    gap: 3rem;
 }
 
 .cartao {
     margin: 1rem 1rem;
-}
-
-.cartao {
-    margin: 1rem 1rem;
-    background-color: aqua;
-    height: 20rem;
-}
-
-.cartao {
-    margin: 1rem 1rem;
-    background-color: aqua;
     height: 20rem;
     flex-grow: 1;
-    flex-basis: calc(33% -6rem);
+    flex-basis: calc(33% - 6rem);
 }
 
 .cartao__conteudo {
     background-color: var(--card-front-color);
     text-align: center;
+    /* background-color: aquamarine; */
     height: 100%;
     transform-style: preserve-3d;
     transition: transform 300ms ease-in-out;
-}
-
-.cartao__conteudo h3 {
-    background-color: tomato;
-    text-align: left;
-    padding: 0.5rem;
 }
 
 .cartao__conteudo h3 {
@@ -80,14 +45,24 @@ footer p {
     backface-visibility: hidden;
 }
 
-.cartao__conteudo__pergunta p{
+.cartao__conteudo p {
+    margin-top: 1rem;
+    padding: 2rem;
+    margin-top: 4rem;
+}
+
+.cartao__conteudo__pergunta p {
     color: var(--text-color);
     font-weight: 500;
 }
 
-.cartao__conteudo__resposta p{
+.cartao__conteudo__resposta p {
     color: var(--card-back-color);
     font-weight: 700;
+}
+
+.cartao:hover .cartao__conteudo {
+    transform: rotateY(180deg);
 }
 
 .cartao__conteudo__pergunta,
@@ -102,8 +77,28 @@ footer p {
     transform: rotateY(180deg);
 }
 
-.cartao__conteudo p {
-    margin-top: 1rem;
-    padding: 2rem;
-    margin-top: 4rem;
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    background-color: black;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 2rem;
+}
+
+footer p {
+    text-align: center;
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
 }
